--- a/index.html
+++ b/index.html
@@ -14,77 +14,66 @@
     <title>SDG Responsive Component</title>
   </head>
   <body>
-    <div class="accordian">
+    <div class="accordion">
       <div
-        class="accordian-panel accordian-start active"
+        class="accordion-panel accordion-start active"
         onClick="changePanel(event, 'fit-guide')"
       >
-        FIT GUIDE
+        DESCRIPTION
         <p class="plus-minus-symbol">-</p>
       </div>
       <div
-        class="accordian-panel accordian-center"
+        class="accordion-panel accordion-center"
         onClick="changePanel(event, 'care-guide')"
       >
-        CARE
+        CODE
         <p class="plus-minus-symbol">+</p>
       </div>
       <div
-        class="accordian-panel accordian-end"
+        class="accordion-panel accordion-end"
         onClick="changePanel(event, 'materials-guide')"
       >
-        MATERIALS
+        BREAKDOWN
         <p class="plus-minus-symbol">+</p>
       </div>
     </div>
 
-    <div class="accordian-text-body">
-      <div class="accordian-text active-panel" id="fit-guide">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eveniet
-        numquam error nemo a est accusantium placeat beatae, illo dolor nulla
-        quia quidem. Alias est animi esse itaque illo officiis! Lorem ipsum
-        dolor sit amet consectetur adipisicing elit. Veritatis nostrum
-        exercitationem eligendi asperiores, perferendis veniam dolorum beatae
-        quas qui delectus corrupti nulla blanditiis provident temporibus in
-        harum minus. Aut, deserunt. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Porro explicabo maxime ipsa. Cupiditate quae enim quia
-        numquam beatae autem ut magni est debitis itaque, quod iusto ad
-        architecto, sapiente reiciendis.
+    <div class="accordion-text-body">
+      <div class="accordion-text active-panel" id="fit-guide">
+        This is a simple, responsive component built with HTML, CSS, and vanilla
+        JavaScript. With a max-width viewport over 767px the component will
+        display as a tabbed/nav element, whereas it will collapse to an
+        accordion-style element on smaller screens.
       </div>
-      <div class="accordian-text" id="care-guide">
-        Flarby darby whoopty doo pringle tingle dabba doo Lorem ipsum dolor sit
-        amet consectetur adipisicing elit. Accusantium doloremque quas aliquid
-        commodi obcaecati totam natus dicta perferendis! Quae laborum, possimus
-        nesciunt delectus id minus nemo nostrum voluptate quia atque. Lorem
-        ipsum dolor sit, amet consectetur adipisicing elit. Nostrum quia
-        mollitia, non, corporis fuga hic natus ullam voluptatibus sint, delectus
-        accusamus! Repudiandae reiciendis in eligendi ex pariatur fuga quam
-        neque!
+      <div class="accordion-text" id="care-guide">
+        No libraries, CDNs, or third-party code involved here beyond the Google
+        font. If you're looking for a similar component built in a similar way
+        (sans outside resources) feel free to snag the code and modify it as you
+        see fit.
       </div>
-      <div class="accordian-text" id="materials-guide">
+      <div class="accordion-text" id="materials-guide">
         <div>
           <div class="materials-panel">
             <span class="materials-span">
-              <span class="materials-span-value">50%</span>
-              <span class="materials-span-label">cashmere</span>
+              <span class="materials-span-value">63.5%</span>
+              <span class="materials-span-label">HTML</span>
             </span>
             <span class="materials-span">
-              <span class="materials-span-value">46%</span>
-              <span class="materials-span-label">wool</span>
+              <span class="materials-span-value">29%</span>
+              <span class="materials-span-label">CSS</span>
               <hr />
             </span>
             <span class="materials-span">
-              <span class="materials-span-value">4%</span>
-              <span class="materials-span-label">modal</span>
+              <span class="materials-span-value">7.5%</span>
+              <span class="materials-span-label">JavaScript</span>
             </span>
           </div>
-          Here be 3 Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
-          eveniet numquam error nemo a est accusantium placeat beatae, illo
-          dolor nulla quia quidem. Alias est animi esse itaque illo officiis!
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
-          nostrum exercitationem eligendi asperiores, perferendis veniam dolorum
-          beatae quas qui delectus corrupti nulla blanditiis provident
-          temporibus in harum minus. Aut, deserunt.
+          Here's the code breakdown for this particular component according to
+          GitHub. The CSS is doing most of the work with an assist from the
+          click handler in the JavaScript file. Adding a few transitions to the
+          CSS would really make this shine and I might revisit this component
+          later to add them. In the meantime, feel free to snag the code as it
+          sits if you're looking for a similar element for your front-end.
         </div>
       </div>
     </div>
