--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./app.css" />
-    <title>SDG Responsive Component</title>
+    <title>Responsive Accordion Component</title>
   </head>
   <body>
     <div class="accordion">
