added repo link

--- a/index.html
+++ b/index.html
@@ -43,13 +43,17 @@
         This is a simple, responsive component built with HTML, CSS, and vanilla
         JavaScript. With a max-width viewport over 767px the component will
         display as a tabbed/nav element, whereas it will collapse to an
-        accordion-style element on smaller screens.
+        accordion-style element on smaller screens (narrow or expand your
+        browser window to view the transition).
       </div>
       <div class="accordion-text" id="care-guide">
-        No libraries, CDNs, or third-party code involved here beyond the Google
-        font. If you're looking for a similar component built in a similar way
-        (sans outside resources) feel free to snag the code and modify it as you
-        see fit.
+        <div>
+          No libraries, CDNs, or third-party code involved here beyond the
+          Google font. If you're looking for a similar component built in a
+          similar way (sans outside resources) feel free to snag the <a href="https://github.com/marcusmcb/responsive-accordion" target='_blank'
+          rel='noreferrer'">code</a> and
+          modify it as you see fit.
+        </div>
       </div>
       <div class="accordion-text" id="materials-guide">
         <div>
